Revert "more static analysis"
This reverts commit 4f7363cf69cad13fd76b3fb2b372225dd7751ac2.